made Player class's 'sex' simpler to reference.
 - just read directly, especially within Player, as there's no need for
a getter.
 - Renamed Actor's 'hits' and 'maxHits' as 'hp' and 'hpMax' to be less
ambiguous.